syntax = "proto3";

package QS.Cloud.Core;

service LoginManagement{
	rpc Start (StartRequest) returns (StartResponse);
	rpc GetBasesForUser (GetBasesForUserRequest) returns (GetBasesForUserResponse);
	rpc StartSession (StartSessionRequest) returns (StartSessionResponse);
	rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse);
}
//Start - Вход в лаунчер, главное место для проверки пароля, дополнительно получаем различные параметры работы от сервера.

message StartRequest{
	string launcher_version = 1;
}

message StartResponse{
	bool need_update_launcher = 1;
	bool you_account_admin = 2;
}

//StartSession - Вход в бзау. Создает сессию, возвращает параметры подключения к базе и id сессии
message StartSessionRequest{
	int32 base_id = 1;
}

message StartSessionResponse{
	bool success = 1;
	string description = 2;
	string session_id = 3;
	bool is_admin = 4;
	BaseConnection db = 5;
}

message BaseConnection{
	string login = 1;
	string password = 2;
	string server = 3;
	string base_name = 4;
	string port = 5;
}

//GetBasesForUser - Получение списка баз в которые можно зайти.
message GetBasesForUserRequest{
}

message GetBasesForUserResponse{
	repeated BaseInfo bases = 1;
}

message BaseInfo{
	int32 base_id = 1;
	string base_title = 2;
}

//ChangePassword - смена собственного пароля от учетной записи
message ChangePasswordRequest{
	string new_password = 1;
}

message ChangePasswordResponse{
	bool success = 1;
}
